Completed all text tools

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
 
+  <!-- META -->
   <meta charset="utf-8">
   <title>Text Formatter</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="A package of text formatting tools.">
+  <meta name="author" content="José Aniceto">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- FONT -->
@@ -28,12 +29,11 @@
 
   <div class="container">
     <!-- Navbar -->
-<!--     <div class="navbar-spacer"></div> -->
     <nav class="navbar">
       <div class="container">
         <ul class="navbar-list">
-          <li class="navbar-item"><a class="navbar-link" href="#">Formatter</a></li>
-          <li class="navbar-item"><a class="navbar-link" href="#">About</a></li>
+          <li class="navbar-item"><a class="navbar-link" href="/">Formatter</a></li>
+          <li class="navbar-item"><a class="navbar-link" href="about.html">About</a></li>
         </ul>
       </div>
     </nav>
