--- a/about.html
+++ b/about.html
@@ -32,8 +32,8 @@
     <nav class="navbar">
       <div class="container">
         <ul class="navbar-list">
-          <li class="navbar-item"><a class="navbar-link" href="/">Formatter</a></li>
-          <li class="navbar-item"><a class="navbar-link" href=".html">About</a></li>
+          <li class="navbar-item"><a class="navbar-link" href="index.html">Formatter</a></li>
+          <li class="navbar-item"><a class="navbar-link" href="about.html">About</a></li>
         </ul>
       </div>
     </nav>
