--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <nav class="navbar">
       <div class="container">
         <ul class="navbar-list">
-          <li class="navbar-item"><a class="navbar-link" href="/">Formatter</a></li>
+          <li class="navbar-item"><a class="navbar-link" href="index.html">Formatter</a></li>
           <li class="navbar-item"><a class="navbar-link" href="about.html">About</a></li>
         </ul>
       </div>
