--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <meta name="author" content="José Aniceto">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- FONT -->
+  <!-- FONTS -->
   <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Inconsolata|Space+Mono" rel="stylesheet">
 
   <!-- CSS -->
   <link rel="stylesheet" href="css/normalize.css">
@@ -32,7 +33,8 @@
     <nav class="navbar">
       <div class="container">
         <ul class="navbar-list">
-          <li class="navbar-item"><a class="navbar-link" href="index.html">Formatter</a></li>
+          <li class="navbar-item"><a class="navbar-link" href="index.html">Text</a></li>
+          <li class="navbar-item"><a class="navbar-link" href="json.html">JSON</a></li>
           <li class="navbar-item"><a class="navbar-link" href="about.html">About</a></li>
         </ul>
       </div>
@@ -61,7 +63,7 @@
     </div>
   </div>
 
-  <script src="js/text-formatting.js"></script>
+  <script src="js/text-tools.js"></script>
   
 </body>
 </html>
