Added word and character counts

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 
   <!-- META -->
   <meta charset="utf-8">
-  <title>Text Formatter</title>
+  <title>About</title>
   <meta name="description" content="A package of text formatting tools.">
   <meta name="author" content="José Aniceto">
   <meta name="viewport" content="width=device-width, initial-scale=1">
